--- a/app.json
+++ b/app.json
@@ -13,27 +13,27 @@
     "env": {
         "API_HASH": {
             "description": "Your API HASH from my.telegram.org",
-            "value": ""
+            "value": "6d03e392b1200580a85ef243f83a48a5"
         },
         "API_ID": {
             "description": "Your API ID from my.telegram.org",
-            "value": ""
+            "value": "24229815"
         },
         "BOT_TOKEN": {
             "description": "Bot token, get it from @BotFather.",
-            "value": ""
+            "value": "5818737155:AAFgEZ3p6PGaHmKqW3QcLEotCb_EsDba9xg"
         },
         "SESSION": {
             "description": "Pyrogram string session.",
-            "value": ""
+            "value": "AQCxt5WEiHqq8DH-glWcAMOp2PdgKXi4L8hEsL7FjnoCN-t9P9-ITdpSnylg1uPL4HO3cAjuSa-lM6p4SqDcn7liLhfgHawNZQOvMn15aZDwApQ_h-GOhCgdSEW_ZNiHHObNhKtwHf-3wwpg0fMJsmOvo5S23CrPa-zWpE1sYGiblwpE8FOs-5qeSmy5Z8NBvlehbFL-YnD0f3XoI8O6ew4yP_5ifvKExBIDCIPC4WccU3hj--uhNx1u73Bm8CQvQJgdnu2obfj4U_TQRC23CVQMfXhTLs2dNROcadTUB7Yl5MqtL2DS_82c_AhQeSsaWuOn7jBUg1p-1d9kPYEekBgYAAAAAUk7U9cA"
         },
         "AUTH": {
             "description": "User ID of Bot owner.",
-            "value": ""
+            "value": "5523592151"
         },
         "FORCESUB": {
             "description": "Username name of public channel without using '@'.",
-            "value": ""
+            "value": "tested_botss"
         }
     },
     "buildpacks": [
